--- a/WolvenKit.Common/packages.config
+++ b/WolvenKit.Common/packages.config
@@ -1,17 +1,29 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="CsvHelper" version="15.0.5" targetFramework="net48" />
+  <package id="Humanizer.Core" version="2.2.0" targetFramework="net48" />
   <package id="Magick.NET.Core" version="5.0.0" targetFramework="net48" />
   <package id="Magick.NET-Q8-AnyCPU" version="7.22.0" targetFramework="net48" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.1" targetFramework="net48" />
-  <package id="Microsoft.CodeAnalysis.Analyzers" version="3.0.0" targetFramework="net48" developmentDependency="true" />
+  <package id="Microsoft.CodeAnalysis" version="3.7.0" targetFramework="net48" />
+  <package id="Microsoft.CodeAnalysis.Analyzers" version="3.3.0" targetFramework="net48" developmentDependency="true" />
   <package id="Microsoft.CodeAnalysis.Common" version="3.7.0" targetFramework="net48" />
   <package id="Microsoft.CodeAnalysis.CSharp" version="3.7.0" targetFramework="net48" />
+  <package id="Microsoft.CodeAnalysis.CSharp.Workspaces" version="3.7.0" targetFramework="net48" />
+  <package id="Microsoft.CodeAnalysis.VisualBasic" version="3.7.0" targetFramework="net48" />
+  <package id="Microsoft.CodeAnalysis.VisualBasic.Workspaces" version="3.7.0" targetFramework="net48" />
+  <package id="Microsoft.CodeAnalysis.Workspaces.Common" version="3.7.0" targetFramework="net48" />
   <package id="Microsoft.CSharp" version="4.7.0" targetFramework="net48" />
   <package id="Pfim" version="0.9.1" targetFramework="net48" />
   <package id="protobuf-net" version="2.4.6" targetFramework="net48" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
   <package id="System.Collections.Immutable" version="1.5.0" targetFramework="net48" />
+  <package id="System.Composition" version="1.0.31" targetFramework="net48" />
+  <package id="System.Composition.AttributedModel" version="1.0.31" targetFramework="net48" />
+  <package id="System.Composition.Convention" version="1.0.31" targetFramework="net48" />
+  <package id="System.Composition.Hosting" version="1.0.31" targetFramework="net48" />
+  <package id="System.Composition.Runtime" version="1.0.31" targetFramework="net48" />
+  <package id="System.Composition.TypedParts" version="1.0.31" targetFramework="net48" />
   <package id="System.Memory" version="4.5.4" targetFramework="net48" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net48" />
   <package id="System.Reflection.Metadata" version="1.6.0" targetFramework="net48" />
