--- a/WolvenKit.Irrlicht/Irrlicht15.0.vcxproj
+++ b/WolvenKit.Irrlicht/Irrlicht15.0.vcxproj
@@ -384,7 +384,7 @@
     </ProjectReference>
     <Link>
       <AdditionalDependencies>libxml2-md.lib;libfbxsdk-md.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;opengl32.lib;winmm.lib;wininet.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>$(ProjectDir)external\fbx\libs\debug;$(ProjectDir)external\d3d9\libs;%(AdditionalLibraryDirectories);$(ProjectDir)lib\$(Configuration)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>$(ProjectDir)external\fbx\libs\debug;$(ProjectDir)external\d3d9\libs;%(AdditionalLibraryDirectories);$(ProjectDir)lib\$(Configuration)\</AdditionalLibraryDirectories>
       <IgnoreSpecificDefaultLibraries>libci.lib;libmct;%(IgnoreSpecificDefaultLibraries)</IgnoreSpecificDefaultLibraries>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <DataExecutionPrevention>
@@ -480,7 +480,7 @@
       <DataExecutionPrevention>
       </DataExecutionPrevention>
       <ImportLibrary>..\..\lib\Win64-visualstudio\$(Configuration)\Irrlicht.lib</ImportLibrary>
-      <AdditionalLibraryDirectories>$(ProjectDir)external\fbx\libs\release;$(ProjectDir)external\d3d9\libs;%(AdditionalLibraryDirectories);$(ProjectDir)lib\$(Configuration)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>$(ProjectDir)external\fbx\libs\release;$(ProjectDir)external\d3d9\libs;%(AdditionalLibraryDirectories);$(ProjectDir)lib\$(Configuration)\</AdditionalLibraryDirectories>
     </Link>
     <PostBuildEvent>
       <Command>xcopy /y $(TargetPath) $(SolutionDir)Libs</Command>
