built-in git backup
- implemented built-in git backup functionality
- fixed many instances of project status and progress logging in the status bar
- fixed a bug where using certain shortcuts in chunk property editing would crash
- fixed a bug where canceling adding chunks wouldn't cancel

--- a/WolvenKit.App/WolvenKit.App.csproj
+++ b/WolvenKit.App/WolvenKit.App.csproj
@@ -229,9 +229,11 @@
     <Compile Include="Model\CopyController.cs" />
     <Compile Include="Model\CsvCommonFunctions.cs" />
     <Compile Include="Model\CsvMaps.cs" />
+    <Compile Include="Model\GitHelper.cs" />
     <Compile Include="Model\ImageUtility.cs" />
     <Compile Include="Model\ImportModel.cs" />
     <Compile Include="Model\IWolvenkitView.cs" />
+    <Compile Include="Model\ProcessHelper.cs" />
     <Compile Include="Model\SearchParameters.cs" />
     <Compile Include="Model\WKPackage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
