--- a/WolvenKit.Irrlicht/Irrlicht15.0.vcxproj
+++ b/WolvenKit.Irrlicht/Irrlicht15.0.vcxproj
@@ -1290,8 +1290,13 @@
     <ClInclude Include=".\source\CGUIToolBar.h" />
     <ClInclude Include=".\source\CGUITreeView.h" />
     <ClInclude Include=".\source\CGUIWindow.h" />
+    <ClInclude Include="include\CSceneManagerWolvenKit.h" />
+    <ClInclude Include="include\ITerrainSceneNodeWolvenKit.h" />
     <ClInclude Include="source\CImageLoaderCube.h" />
+    <ClInclude Include="source\CSceneNodeAnimatorCameraWolvenKit.h" />
+    <ClInclude Include="source\CTerrainSceneNodeWolvenKit.h" />
     <ClInclude Include="source\debug.h" />
+    <ClInclude Include="source\dxtinfo.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="..\..\.gitignore" />
@@ -1619,6 +1624,10 @@
     <ClCompile Include=".\source\CGUIWindow.cpp" />
     <ClCompile Include="source\CImageLoaderCube.cpp" />
     <ClCompile Include="source\CImageLoaderXBM.cpp" />
+    <ClCompile Include="source\CSceneManagerWolvenKit.cpp" />
+    <ClCompile Include="source\CSceneNodeAnimatorCameraWolvenKit.cpp" />
+    <ClCompile Include="source\CTerrainSceneNodeWolvenKit.cpp" />
+    <ClCompile Include="source\dxtinfo.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Irrlicht.rc" />
