--- a/WolvenKit.Render/WolvenKit.Render.csproj
+++ b/WolvenKit.Render/WolvenKit.Render.csproj
@@ -104,11 +104,11 @@
     <Reference Include="FSharp.Core, Version=4.7.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>..\packages\FSharp.Core.4.7.1\lib\net45\FSharp.Core.dll</HintPath>
     </Reference>
-    <Reference Include="Microsoft.WindowsAPICodePack, Version=1.1.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <HintPath>..\packages\Microsoft.WindowsAPICodePack.Core.1.1.0\lib\Microsoft.WindowsAPICodePack.dll</HintPath>
+    <Reference Include="Microsoft.WindowsAPICodePack">
+      <HintPath>..\packages\WindowsAPICodePack-Core.1.1.2\lib\Microsoft.WindowsAPICodePack.dll</HintPath>
     </Reference>
-    <Reference Include="Microsoft.WindowsAPICodePack.Shell, Version=1.1.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <HintPath>..\packages\Microsoft.WindowsAPICodePack.Shell.1.1.0\lib\Microsoft.WindowsAPICodePack.Shell.dll</HintPath>
+    <Reference Include="Microsoft.WindowsAPICodePack.Shell">
+      <HintPath>..\packages\WindowsAPICodePack-Shell.1.1.1\lib\Microsoft.WindowsAPICodePack.Shell.dll</HintPath>
     </Reference>
     <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.12.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
@@ -148,11 +148,22 @@
     <Compile Include="Animation\ExportAnimation.cs" />
     <Compile Include="Animation\ExportFace.cs" />
     <Compile Include="Animation\IgnorableSerializerContractResolver.cs" />
+    <Compile Include="MeshPropertyDialog.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MeshPropertyDialog.Designer.cs">
+      <DependentUpon>MeshPropertyDialog.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ModifiedLevel.cs" />
+    <Compile Include="RenderMessage.cs" />
+    <Compile Include="RenderTreeNode.cs" />
     <Compile Include="CommonData.cs" />
     <Compile Include="frmLevelScene.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="frmLevelScene.Designer.cs" />
+    <Compile Include="frmLevelScene.Designer.cs">
+      <DependentUpon>frmLevelScene.cs</DependentUpon>
+    </Compile>
     <Compile Include="RenderSkeleton.cs" />
     <Compile Include="FastRender\frmFastRender.cs">
       <SubType>Form</SubType>
@@ -170,7 +181,6 @@
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="RenderHelper.cs" />
-    <Compile Include="RenderTreeNode.cs" />
     <Compile Include="WKMesh.cs" />
     <Compile Include="frmTerrain.cs">
       <SubType>Form</SubType>
@@ -185,12 +195,17 @@
     <EmbeddedResource Include="FastRender\frmFastRender.resx">
       <DependentUpon>frmFastRender.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="frmLevelScene.resx" />
     <EmbeddedResource Include="frmRender.resx">
       <DependentUpon>frmRender.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="frmLevelScene.resx">
+      <DependentUpon>frmLevelScene.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmTerrain.resx">
       <DependentUpon>frmTerrain.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MeshPropertyDialog.resx">
+      <DependentUpon>MeshPropertyDialog.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -253,10 +268,10 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="..\Libs\Irrlicht.dll">
-      <Link>Irrlicht.dll</Link>
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
+    <None Include="Resources\Output_16x.png" />
+    <None Include="Resources\AddNodefromFile_354.png" />
+    <None Include="Resources\rotate.png" />
+    <None Include="Resources\move1.png" />
     <Content Include="Terrain\basemap.bmp">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
