visual chunk adding
- added high-level chunk adding to the chunk list view
- fixed a bug where updating properties would reset the chunk list view

--- a/WolvenKit.Common/WolvenKit.Common.csproj
+++ b/WolvenKit.Common/WolvenKit.Common.csproj
@@ -156,6 +156,7 @@
     <Compile Include="Model\IByteSource.cs" />
     <Compile Include="Model\WitcherArchiveManager.cs" />
     <Compile Include="Model\IWolvenkitFile.cs" />
+    <Compile Include="Services\IWindowFactory.cs" />
     <Compile Include="Tools\AlphanumComparator.cs" />
     <Compile Include="Extensions\StringExtensions.cs" />
     <Compile Include="Tools\CommonImageTools.cs" />
