--- a/WolvenKit/WolvenKit.csproj
+++ b/WolvenKit/WolvenKit.csproj
@@ -583,6 +583,7 @@
     <Compile Include="UIConfiguration.cs" />
     <Compile Include="UIController.cs" />
     <Compile Include="Utility\EditorHandler.cs" />
+    <Compile Include="Utility\ProductionWindowFactory.cs" />
     <Compile Include="Utility\UnbundleGameArgs.cs" />
     <Compile Include="Utility\AddFileArgs.cs" />
     <Compile Include="Utility\LoadFileArgs.cs" />
