--- a/WolvenKit.Common/WolvenKit.Common.csproj
+++ b/WolvenKit.Common/WolvenKit.Common.csproj
@@ -161,12 +161,13 @@
     <Compile Include="Extensions\StringExtensions.cs" />
     <Compile Include="Tools\CommonImageTools.cs" />
     <Compile Include="Tools\CSharpCompilerTools.cs" />
-    <Compile Include="Tools\DDSUtils.cs" />
+    <Compile Include="Tools\DDS\DDSUtils.cs" />
     <Compile Include="Tools\DDS\DDS_ENUMS.cs" />
     <Compile Include="Tools\DDS\DDS_HEADER.cs" />
     <Compile Include="Tools\DDS\DDS_HEADER_DXT10.cs" />
     <Compile Include="Tools\DDS\DDS_Metadata.cs" />
     <Compile Include="Tools\DDS\DDS_PIXELFORMAT.cs" />
+    <Compile Include="Tools\DDS\MissingFormatException.cs" />
     <Compile Include="Tools\DDS\TexconvWrapper.cs" />
     <Compile Include="Tools\FNV1A\FNV1A32HashAlgorithm.cs" />
     <Compile Include="Tools\FNV1A\FNV1A64HashAlgorithm.cs" />
@@ -205,6 +206,7 @@
     <Analyzer Include="..\packages\Microsoft.CodeAnalysis.Analyzers.3.0.0\analyzers\dotnet\cs\Microsoft.CodeAnalysis.Analyzers.dll" />
     <Analyzer Include="..\packages\Microsoft.CodeAnalysis.Analyzers.3.0.0\analyzers\dotnet\cs\Microsoft.CodeAnalysis.CSharp.Analyzers.dll" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
