Serialization Versions for ArchiveManagers
- added serialization versions to all serialized ArchiveManagers used for updating ManagerCaches in case the class changes

--- a/WolvenKit.App/WolvenKit.App.csproj
+++ b/WolvenKit.App/WolvenKit.App.csproj
@@ -222,6 +222,7 @@
     <Compile Include="Controllers\Configuration.cs" />
     <Compile Include="Controllers\MainController.cs" />
     <Compile Include="Controllers\RadishController.cs" />
+    <Compile Include="Enums.cs" />
     <Compile Include="MockKernel.cs" />
     <Compile Include="Model\Arguments\RequestEmbeddedFileOpenArgs.cs" />
     <Compile Include="Model\Arguments\SelectChunkArgs.cs" />
