QoL and Nightly Update Channel (#281)
* textureCache writing

- texture cache writing and creation from dds files
- more options for Wkit.Console cache

* cubemap support

* Serialization Versions for ArchiveManagers

- added serialization versions to all serialized ArchiveManagers used for updating ManagerCaches in case the class changes

* bug fixes

- fixed a bug where uncooking files would uncook too many files
- fixed soe UI issues

* main form mvvm

* MainViewModel refactor

* mipmap bugfix

- fixed a bug with writing mipmaps

* custom enums and chunk copy

- add copy-paste for derived types
- fix compilation of custom enums
- fixed a bug where copying localized strings would crash

* doc reset and script editor

- added a document layout resest option in case sthg goes wrong
- fixed a bug where the script editor would not change title when saving

* correct deleting files

* fix merge errors

* Status Progress for Packing

* open mod folder button

* Custom Mod and DLC folder options

- added optino to specify custom dlc and mod folders in settings

* Install Project options

- added install project checkboxes to seetings and pack settings

* Multithreaded Bundle loading

- Multithreaded Bundle loading

* do not ask me again actually remembers now

- frm extract ambiguous do not ask me again button actually remembers now

* Nightly Update Channel

* fix settings request

--- a/WolvenKit.App/WolvenKit.App.csproj
+++ b/WolvenKit.App/WolvenKit.App.csproj
@@ -223,7 +223,6 @@
     <Compile Include="Controllers\MainController.cs" />
     <Compile Include="Controllers\RadishController.cs" />
     <Compile Include="Enums.cs" />
-    <Compile Include="MockKernel.cs" />
     <Compile Include="Model\Arguments\RequestEmbeddedFileOpenArgs.cs" />
     <Compile Include="Model\Arguments\SelectChunkArgs.cs" />
     <Compile Include="Model\Commonfunctions.cs" />
@@ -236,6 +235,7 @@
     <Compile Include="Model\IWolvenkitView.cs" />
     <Compile Include="Model\ProcessHelper.cs" />
     <Compile Include="Model\SearchParameters.cs" />
+    <Compile Include="Model\WccHelper.cs" />
     <Compile Include="Model\WKPackage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Controllers\RadishConfiguration.cs" />
